<resources>
    <string name="app_name">MyProfile</string>
    <string name="mochamad_yusuf">Mochamad Yusuf</string>
    <string name="wellcome_to_my_dashboard">Life is a journey to be experienced, not a problem to be solved</string>
    <string name="all">All</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_sekarang">Lihat Sekarang</string>
    <string name="tugas">Tugas</string>
    <string name="pdf_docx">PDF / Docx / File</string>
    <string name="video">Video</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="back_fragment">Back Fragment</string>
    <string name="mochamad_yusuf_1818046">Mochamad Yusuf | 1818046</string>
    <string name="title_activity_main_tugas4">MainTugas4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mochamad Yusuf</string>
    <string name="nav_header_subtitle">Tugas 4 Praktikum</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="detail">Detail</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="with_cardview">with CardView</string>
</resources>