<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.ac.itn.myprofile.Main.Praktikum.Tugas4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="id.ac.itn.myprofile.Main.Praktikum.Tugas4.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="id.ac.itn.myprofile.Main.Praktikum.Tugas4.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_kalkulator"
        android:name="id.ac.itn.myprofile.Main.Praktikum.Tugas4.ui.kalkulator.KalkulatorFragment"
        android:label="@string/kalkulator"
        tools:layout="@layout/fragment_kalkulator" />

</navigation>